# casio-fx702p-information

./: README.md
documents/: fx702p-program-representation.txt
firmware/fx702p_ram_replacement/: CMakeLists.txt~  flash_code.sh  flash_code.sh~  fx702p_ram_replacement.c  fx702p_ram_replacement.c~
firmware/fx702p_ram_trace/: CMakeLists.txt  CMakeLists.txt~  fx702p_ram_trace.c  fx702p_ram_trace.c~
firmware/fx702p_seven_pin_trace/: #save-trace-decode.txt#  .#save-trace-decode.txt  CMakeLists.txt  CMakeLists.txt~  fx702p_seven_pin_trace.c  fx702p_seven_pin_trace.c~  old.c  save-trace-decode.txt  save-trace-decode.txt~
firmware/fx702p_seven_pin_trace/traces/: trace-save-001.txt  trace-save-002.txt  trace-save-003.txt  trace-save-004.txt  trace-save-005.txt
traces/: fx702p-0001-save-abc.txt  fx702p-0002-save-abc.txt
